refactor: refine service layers and fix miscellaneous bugs